--- a/CommentBox/test.css
+++ b/CommentBox/test.css
@@ -175,13 +175,13 @@ body {
 } */
 
 .l_column0{
-    width: 25%;
+    width: 15%;
     height: inherit;
 }
 
 
 .l_column1{
-    width: 20%;
+    width: 30%;
     height: inherit;
 }
 
@@ -206,7 +206,7 @@ body {
 } */
 
 .c_column0{
-    width: 15%;
+    width: 20%;
     height: inherit;
     border-color: black;
     font-size: 1.2em;
@@ -318,6 +318,10 @@ body {
     font-weight: 700;
     text-align: left;
     margin: 0 10px 10px 0px;
+}
+
+.question-body{
+    font-weight: 700;
 }
 .btn .btn-warning .ideaButton{
     width: inherit;
