--- a/CommentBox/test.css
+++ b/CommentBox/test.css
@@ -94,17 +94,17 @@ body {
 }
 
 .label-info-body{
-    width: 70px;
+    width: 50%;
     padding: 5px 0;
 }
 
-/* .fa-comment-alt.label_icons{
+.fa-comment-alt.label_icons{
     opacity:0.7;
 }
 
 .fa-user.label_icons{
     opacity:0.7;
-} */
+}
 
 .label-emo-body{
     width: 20%;
@@ -139,7 +139,7 @@ body {
 }
 
 .c_row:hover{
-    border: solid 2px #696969;
+    background-color: #A9A9A9;
 }
 
 /* .t_column0{
@@ -175,22 +175,31 @@ body {
 } */
 
 .l_column0{
-    width: 15%;
+    width: 2%;
     height: inherit;
 }
 
-
 .l_column1{
-    width: 30%;
+    width: 14%;
     height: inherit;
 }
 
 .l_column2{
-    width: 30%;
+    width: 9%;
     height: inherit;
 }
 
 .l_column3{
+    width: 20%;
+    height: inherit;
+}
+
+.l_column4{
+    width: 30%;
+    height: inherit;
+}
+
+.l_column5{
     width: 25%;
     height: inherit;
 }
@@ -204,9 +213,24 @@ body {
     width: 10%;
     height: inherit;
 } */
+.participantInfoColumn{
+    width: 50%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
 
 .c_column0{
-    width: 20%;
+    width: 2%;
+    height: inherit;
+    font-weight: bold;
+    padding:0px 0px 0px 0px;
+    display: flex;
+    flex-direction: row;
+}
+
+.c_column1{
+    width: 14%;
     height: inherit;
     border-color: black;
     font-size: 1.2em;
@@ -216,34 +240,44 @@ body {
     flex-direction: row;
 }
 
-.c_column1{
-    width: 25%;
+.c_column2{
+    width: 9%;
     height: inherit;
     border-color: black;
     padding:8px 0px 0px 0px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
 
-.c_column2{
+.c_column3{
+    width: 20%;
+    height: inherit;
+    border-color: black;
+    padding:8px 0px 0px 8px;
+}
+
+.c_column4{
     width: 30%;
     height: inherit;
     border-color: black;
     padding: 2px 0px 0px 0px;
 }
 
-.c_column3{
+.c_column5{
     width: 25%;
     height: inherit;
     border-color: black;
     padding: 2px 0px 0px 0px;
 }
 /* 
-.c_column4{
+.c_column5{
     width: 10%;
     height: inherit;
     border-color: black;
 }
 
-.c_column5{
+.c_column6{
     width: 10%;
     height: inherit;
     border-color: black;
@@ -260,7 +294,7 @@ body {
 .ideaDiv{
     /*color:blue;*/
     background-color: #DEE5EA;
-    margin: 5px 10px;
+    margin: 10px 10px;
     padding: 5px 5px;
     border-radius: 5px;
 }
@@ -419,14 +453,14 @@ body {
     outline:solid thin gray;
 } */
 
-/* .fa-sort-amount-down.label_icons{
-    opacity: 0.5
-}*/
+.fa-sort-amount-down.label_icons{
+    opacity: 0.7
+}
 
-/* .fa-sort-amount-down.label_icons:hover{
+.fa-sort-amount-down.label_icons:hover{
     opacity: 1.0;
     cursor:pointer; 
-} */
+}
 
 .tippy-tooltip.tomato-theme {
     background-color: tomato;
@@ -589,15 +623,15 @@ body {
     width:50%;
 }
 
-.label_icons{
+/* .label_icons{
     opacity:1.0;
-}
+} */
 
-/* .label_icons:hover{
+.label_icons:hover{
     opacity: 1.0;
     outline: none;
     cursor: pointer;
-} */
+}
 
 .badge{
     border-style:solid;
@@ -636,6 +670,12 @@ body {
 
 .idea-Name{
     width: 60%;
+}
+
+.serial-Name{
+    padding: 8px 0px 0px 2px; 
+    text-align:center;
+    font-weight: bold;
 }
 
 /* .idea-Name:hover{
