--- a/CommentBox/test.css
+++ b/CommentBox/test.css
@@ -33,7 +33,7 @@ body {
 .aggregate{
     align-items: center;
     width: 100%;
-    height: 32vh;
+    height: 74%;
     overflow: scroll;
     overflow-x: hidden;
     /* -ms-overflow-style: none;
@@ -286,7 +286,7 @@ body {
 
 .box{
     width: 100%;
-    height: 50vh;
+    height: 0px;
     overflow: scroll;
     transition: all .5s linear;
     overflow-x:hidden;
