--- a/CommentBox/test.css
+++ b/CommentBox/test.css
@@ -497,7 +497,7 @@ body {
 }
 
 .fa-plus-circle{
-    color: #0099FF;
+    color: #337AB7;
     opacity: 0.7;
 }
 .fa-plus-circle:hover{
@@ -507,7 +507,7 @@ body {
 }
 
 .fa-clipboard-list{
-    color: #0099FF;
+    color: #337AB7;
     opacity: 0.7;
 }
 .fa-clipboard-list:hover{
@@ -517,7 +517,7 @@ body {
 }
 
 .fa-save{
-    color: #0099FF;
+    color: #337AB7;
     opacity: 0.7;
 }
 .fa-save:hover{
@@ -527,7 +527,7 @@ body {
 }
 
 .fa-exclamation-circle{
-    color: #0099FF;
+    color: #337AB7;
     opacity: 0.7;
 }
 .fa-exclamation-circle:hover{
