--- a/CommentBox/test.css
+++ b/CommentBox/test.css
@@ -18,6 +18,60 @@ body {
 
 }
 
+.parentCompare{
+    display: flex;
+    flex-direction: row;
+    height: 100%;
+    width: 100%;
+    justify-content: start;
+    align-items: center;
+}
+
+.compare{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 50%;
+    justify-content: start;
+    align-items: center;
+}
+
+.compareHeader{
+    display: flex;
+    flex-direction: row;
+    height: 10%;
+    width: 100%;
+    justify-content: start;
+    align-items: center;
+    background-color: yellow;
+    border: thin solid #DEE5EA
+}
+
+.compareDrop{
+    display: flex;
+    flex-direction: row;
+    height: 7%;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    border: thin solid #DEE5EA
+
+}
+
+.compareBody{
+    display: flex;
+    flex-direction: row;
+    height: 74%;
+    width: 100%;
+    justify-content: start;
+    align-items: center;
+    background-color: orange;
+    border: thin solid #DEE5EA;
+    overflow: scroll;
+    overflow-x: hidden;
+
+}
+
 .c_svg{
     border:solid white;
     border-width: 1px;
@@ -80,6 +134,7 @@ body {
     flex-direction: row;
     flex-wrap: wrap;
     align-items: center;
+    justify-content: center;
     outline: thin solid #337AB7;
 }
 
@@ -110,6 +165,17 @@ body {
     width: 12.5%;
     padding: 5px 0;
     opacity:1.0;
+}
+
+.label-wcloud-body{
+    width: 100%;
+    height: 100%;
+    padding: 5px 0;
+    opacity: 1.0;
+}
+
+.label-wcloud-body:hover{
+    cursor:pointer;
 }
 
 .label-sub-body{
@@ -159,7 +225,12 @@ body {
 }
 
 .l_column4{
-    width: 55%;
+    width: 10%;
+    height: inherit;
+}
+
+.l_column5{
+    width: 45%;
     height: inherit;
 }
 
@@ -208,7 +279,17 @@ body {
 }
 
 .c_column4{
-    width: 55%;
+    width: 10%;
+    height: inherit;
+    border-color: black;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.c_column5{
+    width: 45%;
     height: inherit;
     border-color: black;
     padding: 2px 0px 0px 0px;
@@ -472,6 +553,10 @@ body {
     margin: 0px 0px 0px 0px;
 }
 
+.wcloud_button:hover{
+    cursor:pointer;
+}
+
 .topicName:hover{
     cursor:pointer;
 }
@@ -587,7 +672,7 @@ body {
     border: none;
     cursor: pointer;
 }
-
+/* 
 .navbar-toggle, .navbar-form .navbar-left, .input-group{
     padding-top:5px !important; 
     padding-bottom:5px !important;
@@ -596,18 +681,18 @@ body {
     min-height:30px !important;
     margin-bottom: 0px;
     border-radius: 0px;
-}
+} */
 
-.navbar-brand{
+/* .navbar-brand{
     padding-top:10px !important; 
     padding-bottom:10px !important;
-}
+} */
 
-.btn, .btn-primary, .navbar-btn{
-    margin: 15px 0px 0px 0px;
+/* .btn, .btn-primary, .navbar-btn{
+    margin: 0pxpx 0px 0px 0px;
     background-color: #2C485B;
     border-color: #2C485B;
-}
+} */
 
 .btn, .btn-default{
     color: white;
@@ -617,6 +702,10 @@ body {
 
 .navbar-text:hover{
     cursor:pointer
+}
+
+.navbar-form .navbar-right{
+    margin-bottom: 0px;
 }
 
 #box_header{
