line chart modified to inline and header

--- a/CommentBox/test.css
+++ b/CommentBox/test.css
@@ -931,8 +931,8 @@ body {
 	fill: #3C92BA;     
 }
 
-.svg_inline:hover{
+/* .svg_inline:hover{
     cursor: pointer;
     background-color: #ECF2F9;
     border-radius: 5px;
-}
+} */
